# api/src/controllers/user.controller.ts
@@ -57,7 +57,4 @@ export class UserController extends Controller {
     const { username, password } = requestBody;
     return userService.updateUser(id, username, password);
   }
-
-  @Get("me")
-  public async getMe() {}
 }
